--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
   <Head>
     <title>Welcome</title>
+   <!--
     <link rel = 'stylesheet' href = './css/reset.css'>
     <link rel = 'stylesheet' href = './css/style.css'>
+   -->
   </Head>
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'Salmon Cookies'></a>
+        <a id = 'nav-title'>Salmon Cookie Me</a>
         <a href =''>Locations</a>
         <a href =''>About</a>
-        <a href =''>Order</a>
+        <a href =''>Menu</a>
+        <a href ='./html/sales.html'>Oh no! You gained Access!!</a>
       </nav>
       <h1>The Future of Healthy Desert!</h1>
-      
+      <p>
         <img src = ''>
       </p>
     </main>
