--- a/html/loc4.html
+++ b/html/loc4.html
@@ -10,20 +10,20 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>SeaTac Airport Sales</a>
+        <a id = 'nav-title'>Capitol Hill Sales</a>
         <a href ='./sales.html'>Sales Home</a>
         <a href ='./loc1.html'>1st & Pike</a>
+        <a href ='./loc2.html'>SeaTac</a>
         <a href ='./loc3.html'>Seattle Center</a>
-        <a href ='./loc4.html'>Capitol Hill</a>
         <a href ='./loc5.html'>Alki</a>
         <a href ='../index.html'>Customer Page</a>
       </nav>
-      <h1>SeaTac Airport Sales</h1>
+      <h1>Capitol Hill Sales</h1>
       <p>
-        <ul id = 'list-loc2'>
+        <ul id = 'list-loc4'>
           Sales Per Hour
         </ul>
-        <table id = 'table-loc2'>
+        <table id = 'table-loc4'>
           <tr>
             <th>Location</th>
             <th>Min/Cust</th>
@@ -37,7 +37,7 @@
     <script>
       window.onload = function()
       {
-        loc2Build();
+        loc4Build();
       };
     </script>
   </body>
