--- a/html/loc1.html
+++ b/html/loc1.html
@@ -10,19 +10,35 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Location 1 Sales</a>
+        <a id = 'nav-title'>1st & Pike Sales</a>
         <a href ='./sales.html'>Sales Home</a>
+        <a href ='./loc2.html'>SeaTac</a>
+        <a href ='./loc3.html'>Seattle Center</a>
+        <a href ='./loc4.html'>Capitol Hill</a>
+        <a href ='./loc5.html'>Alki</a>
         <a href ='../index.html'>Customer Page</a>
       </nav>
-      <h1>Location Sales</h1>
+      <h1>1st and Pike Sales</h1>
       <p>
         <ul id = 'list-loc1'>
-          <!--
-          <li>Sales Per Hour</li>
-          -->
+          Sales Per Hour
         </ul>
+        <table id = 'table-loc1'>
+          <tr>
+            <th>Location</th>
+            <th>Min/Cust</th>
+            <th>Max/Cust</th>
+            <th>Avg Cookie/Sale</th>
+          </tr>
+        </table>
       </p>
     </main>
     <script src = '../js/app.js'></script>
+    <script>
+      window.onload = function()
+      {
+        loc1Build();
+      };
+    </script>
   </body>
 </html>
