--- a/html/sales.html
+++ b/html/sales.html
@@ -15,7 +15,12 @@
       </nav>
       <h1>Our Sales by Location</h1>
       <p>
-        <a href = './loc1.html'>Location 1<img src = ''></a>
+        <!--All images are credited to the owner. I do not own the rights to these photos-->
+        <a href = './loc1.html'>1st & Pike<img src = '../pictures/loc1.jpg' width = 100px height = 100px></a>
+        <a href = './loc2.html'>SeaTac Airport<img src = '../pictures/loc2.jpg' width = 100px height = 100px></a>
+        <a href = './loc3.html'>Seattle Center<img src = '../pictures/loc3.jpg' width = 100px height = 100px></a>
+        <a href = './loc4.html'>Capitol Hill<img src = '../pictures/loc4.jpg' width = 100px height = 100px></a>
+        <a href = './loc5.html'>Alki<img src = '../pictures/loc5.jpg' width = 100px height = 100px></a>
       </p>
     </main>
     <script src = '../js/app.js'></script>
