fixed logic issues with 90% of functions

--- a/html/about.html
+++ b/html/about.html
@@ -11,9 +11,9 @@
     <main>
       <nav id = 'navb'>
         <a id = 'nav-title'>Salmon Cookie Me</a>
-        <a href =''>Locations</a>
-        <a href =''>About</a>
-        <a href =''>Menu</a>
+        <a href ='./locations.html'>Locations</a>
+        <a href ='./about.html'>About</a>
+        <a href ='./menu.html'>Menu</a>
         <a href ='./html/sales.html'>BackDoor</a>
       </nav>
       <h1>The Future of Healthy Desert!</h1>
