--- a/html/loc1.html
+++ b/html/loc1.html
@@ -2,16 +2,17 @@
 <html>
   <Head>
     <title>Sales Metrics</title>
-    <!--
-    <link rel = 'stylesheet' href = './css/reset.css'>
-    <link rel = 'stylesheet' href = './css/style.css'>
-    -->
+    
+    <link rel = 'stylesheet' href = '../css/reset.css'>
+    <link rel = 'stylesheet' href = '../css/style.css'>
+
   </Head>
   <body>
     <main>
       <nav id = 'navb'>
         <a id = 'nav-title'>1st & Pike Sales</a>
         <a href ='./sales.html'>Sales Home</a>
+        <a href ='./loc1.html'>1st & Pike</a>
         <a href ='./loc2.html'>SeaTac</a>
         <a href ='./loc3.html'>Seattle Center</a>
         <a href ='./loc4.html'>Capitol Hill</a>
@@ -23,7 +24,7 @@
         <ul id = 'list-loc1'>
           Sales Per Hour
         </ul>
-        <table id = 'table-loc1'>
+        <table align = 'Center' id = 'table-loc1'>
           <tr>
             <th>Location</th>
             <th>Min/Cust</th>
