--- a/html/loc4.html
+++ b/html/loc4.html
@@ -2,10 +2,10 @@
 <html>
   <Head>
     <title>Sales Metrics</title>
-    <!--
-    <link rel = 'stylesheet' href = './css/reset.css'>
-    <link rel = 'stylesheet' href = './css/style.css'>
-    -->
+    
+    <link rel = 'stylesheet' href = '../css/reset.css'>
+    <link rel = 'stylesheet' href = '../css/style.css'>
+    
   </Head>
   <body>
     <main>
@@ -15,6 +15,7 @@
         <a href ='./loc1.html'>1st & Pike</a>
         <a href ='./loc2.html'>SeaTac</a>
         <a href ='./loc3.html'>Seattle Center</a>
+        <a href ='./loc4.html'>Capitol Hill</a>
         <a href ='./loc5.html'>Alki</a>
         <a href ='../index.html'>Customer Page</a>
       </nav>
