--- a/html/loc5.html
+++ b/html/loc5.html
@@ -2,10 +2,10 @@
 <html>
   <Head>
     <title>Sales Metrics</title>
-    <!--
-    <link rel = 'stylesheet' href = './css/reset.css'>
-    <link rel = 'stylesheet' href = './css/style.css'>
-    -->
+    
+    <link rel = 'stylesheet' href = '../css/reset.css'>
+    <link rel = 'stylesheet' href = '../css/style.css'>
+    
   </Head>
   <body>
     <main>
@@ -16,6 +16,7 @@
         <a href ='./loc2.html'>SeaTac</a>
         <a href ='./loc3.html'>Seattle Center</a>
         <a href ='./loc4.html'>Capitol Hill</a>
+        <a href ='./loc5.html'>Alki</a>
         <a href ='../index.html'>Customer Page</a>
       </nav>
       <h1>Alki Sales</h1>
@@ -37,7 +38,7 @@
     <script>
       window.onload = function()
       {
-        loc1Build();
+        loc5Build();
       };
       </script>
   </body>
