1st gen comeplete skeleton.

--- a/html/loc5.html
+++ b/html/loc5.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Alki Sales</a>
+        <a id = 'nav-title'>Sales</a>
         <a href ='./sales.html'>Sales Home</a>
         <a href ='./loc1.html'>1st & Pike</a>
         <a href ='./loc2.html'>SeaTac</a>
