--- a/html/locations.html
+++ b/html/locations.html
@@ -10,7 +10,8 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Salmon Cookie Me</a>
+        <a id = 'nav-title'>Pat's</a>
+        <a href ='./index.html'>Home</a>
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
@@ -21,8 +22,19 @@
         <img src = './pictures/salmon.png'>
       </p>
       <p>
-        Healthy cookie with your coffee! Under construction!
-      </p>
+        <!--All images are credited to the owner. I do not own the rights to these photos-->
+        <ul>
+          <li>1st & Pike<img src = '../pictures/loc1.jpg' width = 100px height = 100px>
+          </li>
+          <li>SeaTac Airport<img src = '../pictures/loc2.jpg' width = 100px height = 100px>
+          </li>
+          <li>Seattle Center<img src = '../pictures/loc3.jpg' width = 100px height = 100px></li>
+          <li>Capitol Hill<img src = '../pictures/loc4.jpg' width = 100px height = 100px>
+          </li>
+          <li>Alki<img src = '../pictures/loc5.jpg' width = 100px height = 100px>
+          </li>
+          </ul>
+        </p>
     </main>
     <script src = './js/app.js'></script>
   </body>
