--- a/html/sales.html
+++ b/html/sales.html
@@ -10,7 +10,13 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Location Sales</a>
+        <a id = 'nav-title'>Sales</a>
+        <a href ='./sales.html'>Sales Home</a>
+        <a href ='./loc1.html'>1st & Pike</a>
+        <a href ='./loc2.html'>SeaTac</a>
+        <a href ='./loc3.html'>Seattle Center</a>
+        <a href ='./loc4.html'>Capitol Hill</a>
+        <a href ='./loc5.html'>Alki</a>
         <a href ='../index.html'>Customer Page</a>
       </nav>
       <h1>Our Sales by Location</h1>
