--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Salmon Cookie Me</a>
-        <a href =''>Locations</a>
-        <a href =''>About</a>
-        <a href =''>Menu</a>
+        <a id = 'nav-title'>Pat's</a>
+        <a href ='./index.html'>Home</a>
+        <a href ='./html/locations.html'>Locations</a>
+        <a href ='./html/about.html'>About</a>
+        <a href ='./html/menu.html'>Menu</a>
         <a href ='./html/sales.html'>BackDoor</a>
       </nav>
       <h1>The Future of Healthy Desert!</h1>
