--- a/html/menu.html
+++ b/html/menu.html
@@ -10,18 +10,29 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Salmon Cookie Me</a>
+        <a id = 'nav-title'>Pat's</a>
+        <a href ='./index.html'>Home</a>
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
         <a href ='./html/sales.html'>BackDoor</a>
       </nav>
-      <h1>The Future of Healthy Desert!</h1>
+      <h1>Menu</h1>
       <p id = 'fishy'>
         <img src = './pictures/salmon.png'>
       </p>
       <p>
-        Healthy cookie with your coffee! Under construction!
+        <ul>
+          <li>Salmon Cookies</li>
+          <li>Salmon Cookies</li>
+          <li>Salmon Cookies</li>
+          <li>Salmon Cookies</li>
+          <li>Salmon Cookies</li>
+          <li>Salmon Cookies</li>
+          <li>Salmon Cookies</li>
+          <li>Salmon Cookies</li>
+          <li>....and Coffee</li>
+        </ul>
       </p>
     </main>
     <script src = './js/app.js'></script>
