TA updates w/exception to .gitignore

--- a/html/sales.html
+++ b/html/sales.html
@@ -12,23 +12,10 @@
       <nav id = 'navb'>
         <a id = 'nav-title'>Sales</a>
         <a href ='./sales.html'>Sales Home</a>
-        <a href ='./loc1.html'>1st & Pike</a>
-        <a href ='./loc2.html'>SeaTac</a>
-        <a href ='./loc3.html'>Seattle Center</a>
-        <a href ='./loc4.html'>Capitol Hill</a>
-        <a href ='./loc5.html'>Alki</a>
         <a href ='../index.html'>Customer Page</a>
       </nav>
-      <h1>Our Sales by Location</h1>
-      <p>
-        <!--All images are credited to the owner. I do not own the rights to these photos-->
-        <a href = './loc1.html'>1st & Pike<img src = '../pictures/loc1.jpg' width = 100px height = 100px></a>
-        <a href = './loc2.html'>SeaTac Airport<img src = '../pictures/loc2.jpg' width = 100px height = 100px></a>
-        <a href = './loc3.html'>Seattle Center<img src = '../pictures/loc3.jpg' width = 100px height = 100px></a>
-        <a href = './loc4.html'>Capitol Hill<img src = '../pictures/loc4.jpg' width = 100px height = 100px></a>
-        <a href = './loc5.html'>Alki<img src = '../pictures/loc5.jpg' width = 100px height = 100px></a>
-      </p>
-      <table align = 'Center' id = 'table-home'>
+      <h1>Our Numbers</h1>
+      <table id = 'table-home'>
         <tr>
           <th>Location</th>
           <th>Min/Cust</th>
@@ -38,13 +25,5 @@
       </table>
     </main>
     <script src = '../js/app.js'></script>
-    
-    <script>
-      window.onload = function()
-      {
-        salesBuild('table-home');
-      };
-    </script>
-    
   </body>
 </html>
