added bg-color to <p> on homepage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src = './pictures/salmon.png'>
       </p>
       <p>
-        Healthy cookie with your coffee! Under construction!
+        <span id='home-p'>Healthy cookie with your coffee! Under construction!</span>
       </p>
     </main>
     <script src = './js/app.js'></script>
