--- a/html/menu.html
+++ b/html/menu.html
@@ -19,10 +19,10 @@
       </nav>
       <h1>Menu</h1>
       <p id = 'fishy'>
-        <img src = './pictures/salmon.png'>
+        <img src = '../pictures/salmon.png'>
       </p>
       <p>
-        <ul>
+        <ul id='menu-list'>
           <li>Salmon Cookies</li>
           <li>Salmon Cookies</li>
           <li>Salmon Cookies</li>
