added totals column

--- a/html/sales.html
+++ b/html/sales.html
@@ -33,7 +33,8 @@
           <th>5pm</th>  
           <th>6pm</th>  
           <th>7pm</th>
-          <th>8pm</th>            
+          <th>8pm</th> 
+          <th>Totals</th>           
         </tr>
       </table>
     </main>
