--- a/html/sales.html
+++ b/html/sales.html
@@ -16,27 +16,7 @@
       </nav>
       <h1>Our Numbers</h1>
 
-      <table id = 'table-sales'>
-        <tr>
-          <th>Location</th>
-          <th>6am</th>
-          <th>7am</th>  
-          <th>8am</th>  
-          <th>9am</th>  
-          <th>10am</th>  
-          <th>11am</th>  
-          <th>12pm</th>  
-          <th>1pm</th>  
-          <th>2pm</th>  
-          <th>3pm</th>  
-          <th>4pm</th>  
-          <th>5pm</th>  
-          <th>6pm</th>  
-          <th>7pm</th>
-          <th>8pm</th> 
-          <th>Totals</th>           
-        </tr>
-      </table>
+      <table id = 'table-sales'></table>
     </main>
     <script src = '../js/app.js'></script>
   </body>
