shaky append new store

--- a/html/sales.html
+++ b/html/sales.html
@@ -16,7 +16,7 @@
       </nav>
       <h1>Our Numbers</h1>
 
-      <form id = 'add-store'>
+      <form id = 'addStore'>
         <fieldset>
           <Legend>New Store Input</Legend>
           <label>Store Name</label>
