added store totals back to table. new store append after hourly totals. needs fixed

--- a/html/locations.html
+++ b/html/locations.html
@@ -11,11 +11,11 @@
     <main>
       <nav id = 'navb'>
         <a id = 'nav-title'>Pat's</a>
-        <a href ='./index.html'>Home</a>
+        <a href ='../index.html'>Home</a>
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
-        <a href ='./html/sales.html'>BackDoor</a>
+        <a href ='./sales.html'>BackDoor</a>
       </nav>
       <h1>The Future of Healthy Desert!</h1>
       <p id = 'fishy'>
