--- a/html/sales.html
+++ b/html/sales.html
@@ -26,7 +26,7 @@
           <label>Max Customer Data</label>
           <input name = custMaxD type = "number" size = "16" placeholder="customer metrics" required/>
           <label>Cookie Data</label>
-          <input name = cookD type = "number" size = "16" placeholder="cookie metrics" required/>
+          <input name = cookD type="number" step = "0.1" size = "16" placeholder="cookie metrics" required/>
           <button type ="submit">Create Store</button>
         </fieldset>
       </form>
