--- a/html/events.html
+++ b/html/events.html
@@ -2,7 +2,6 @@
 <html>
   <Head>
     <title>Welcome</title>
-   
     <link rel = 'stylesheet' href = '../css/reset.css'>
     <link rel = 'stylesheet' href = '../css/style.css'>
    
@@ -18,14 +17,17 @@
         <a href ='./events.html'>Upcoming events</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
-      <h1>The Future of Healthy Desert!</h1>
+      <h1>Menu</h1>
       <p id = 'fishy'>
-        <img src = './pictures/salmon.png'>
+        <img src = '../pictures/salmon.png'>
       </p>
-      <p>
-        <span id='home-p'>Healthy cookie with your coffee! Under construction!</span>
-      </p>
+        <h2>Upcoming Events</h2>
+        <img src = '../pictures/family.jpg'/>
+        <p>
+          On May 2, 2345 we will be having our "Salmon Days in Issaquah! Great family fun with food, games and anything you can think of. Come join us!"
+        </p>
+      </div>
     </main>
-    <script src = './js/app.js'></script>
+   <!--- <script src = './js/app.js'></script>-->
   </body>
 </html>
