--- a/html/about.html
+++ b/html/about.html
@@ -15,6 +15,7 @@
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
+        <a href ='./events.html'>Upcoming events</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
       <h1>About</h1>
