--- a/html/locations.html
+++ b/html/locations.html
@@ -15,26 +15,40 @@
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
+        <a href ='./events.html'>Upcoming events</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
-      <h1>The Future of Healthy Desert!</h1>
-      <p id = 'fishy'>
-        <img src = './pictures/salmon.png'>
-      </p>
-      <p>
+      <h1>Our Awesome Locations</h1>
         <!--All images are credited to the owner. I do not own the rights to these photos-->
-        <ul>
-          <li>1st & Pike<img src = '../pictures/loc1.jpg' width = 100px height = 100px>
-          </li>
-          <li>SeaTac Airport<img src = '../pictures/loc2.jpg' width = 100px height = 100px>
-          </li>
-          <li>Seattle Center<img src = '../pictures/loc3.jpg' width = 100px height = 100px></li>
-          <li>Capitol Hill<img src = '../pictures/loc4.jpg' width = 100px height = 100px>
-          </li>
-          <li>Alki<img src = '../pictures/loc5.jpg' width = 100px height = 100px>
-          </li>
-          </ul>
-        </p>
+        <div id='pike'>
+          <p><img src = '../pictures/loc1.jpg' width = 300px height = 300px></p>
+          <p>
+            1st & Pike <br/>Address: 1111 Pike Street, Seattle, WA<br/>Phone: 555-5555
+          </p>
+        </div>
+        <div id = 'seatac'>
+          <p><img src = '../pictures/loc2.jpg' width = 300px height = 300px></p>
+          <p>
+            SeaTac Airport <br/> Address: THE AIRPORT IN SEATAC <br/> Phone: 555-5556
+          </p>
+        <div id = 'seattle'>
+          <p><img src = '../pictures/loc3.jpg' width = 300px height = 300px></p>
+          <p>
+            Seattle Center <br/> Address: 1234 Somewhere Street, Seattle, WA<br/> Phone: 555-5557
+          </p>
+        </div>
+        <div id = 'capitol'>
+          <p><img src = '../pictures/loc4.jpg' width = 300px height = 300px></p>
+          <p>
+            Capitol Hill<br/>Address: 1234 Capitol Hill St.<br/>Phone: 555-5558
+          </p>
+        </div>
+        <div id = 'alki'>
+          <p><img src = '../pictures/loc5.jpg' width = 300px height = 300px></p>
+          <p>
+            Address: 123 Alki Blvd. in your city, WA<br/>Phone: 555-5559
+          </p>
+        </div>
     </main>
     <script src = './js/app.js'></script>
   </body>
