--- a/html/menu.html
+++ b/html/menu.html
@@ -15,13 +15,14 @@
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
+        <a href ='./events.html'>Upcoming events</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
       <h1>Menu</h1>
       <p id = 'fishy'>
         <img src = '../pictures/salmon.png'>
       </p>
-      <p>
+      <div id='menu'>
         <ul id='menu-list'>
           <li>Salmon Cookies</li>
           <li>Salmon Cookies</li>
@@ -33,7 +34,14 @@
           <li>Salmon Cookies</li>
           <li>....and Coffee</li>
         </ul>
-      </p>
+      </div>
+      <div>
+        <h2>Swag</h2>
+        <img src = '../pictures/shirt.jpg'/>
+        <p>
+          We only have shirts! Shirts range in sizes xxs - XXXL. Call us for more infor: 555-5555
+        </p>
+      </div>
     </main>
     <script src = './js/app.js'></script>
   </body>
