customer-face update 2.0

--- a/html/events.html
+++ b/html/events.html
@@ -9,22 +9,22 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Pat's</a>
         <a href ='../index.html'>Home</a>
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
         <a href ='./events.html'>Upcoming events</a>
+        <a href = './merchandise.html'>Merchandise</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
-      <h1>Menu</h1>
-      <p id = 'fishy'>
-        <img src = '../pictures/salmon.png'>
-      </p>
-        <h2>Upcoming Events</h2>
-        <img src = '../pictures/family.jpg'/>
-        <p>
+      <h1>Upcoming Events</h1>
+        <h2>Salmon Days</h2>
+        <p class = 'fishy'><img src = '../pictures/family.png' width = 500px height = 300px /></p>
+        <p class = 'main-content'>
           On May 2, 2345 we will be having our "Salmon Days in Issaquah! Great family fun with food, games and anything you can think of. Come join us!"
+        </p>
+        <p class = 'fishy'>
+          <img src='../pictures/chinook.png'/>
         </p>
       </div>
     </main>
