--- a/html/locations.html
+++ b/html/locations.html
@@ -10,12 +10,12 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Pat's</a>
         <a href ='../index.html'>Home</a>
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
         <a href ='./events.html'>Upcoming events</a>
+        <a href = './merchandise.html'>Merchandise</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
       <h1>Our Awesome Locations</h1>
