--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
       <nav id = 'navb'>
         <a id = 'nav-title'>Pat's</a>
         <a href ='../index.html'>Home</a>
-        <a href ='./locations.html'>Locations</a>
-        <a href ='./about.html'>About</a>
-        <a href ='./menu.html'>Menu</a>
-        <a href ='./events.html'>Upcoming events</a>
-        <a href ='./sales.html'>BackDoor</a>
+        <a href ='./html/locations.html'>Locations</a>
+        <a href ='./html/about.html'>About</a>
+        <a href ='./html/menu.html'>Menu</a>
+        <a href ='./html/events.html'>Upcoming events</a>
+        <a href ='./html/merchandise.html'>Merchandise</a>
+        <a href ='./html/sales.html'>BackDoor</a>
       </nav>
       <h1>The Future of Healthy Desert!</h1>
       <p id = 'fishy'>
         <img src = './pictures/salmon.png'>
       </p>
       <p>
-        <span id='home-p'>Healthy cookie with your coffee! Under construction!</span>
+        <span id='home-p'>Healthy cookie with your coffee!</span>
       </p>
     </main>
     <script src = './js/app.js'></script>
