--- a/html/about.html
+++ b/html/about.html
@@ -10,19 +10,19 @@
   <body>
     <main>
       <nav id = 'navb'>
-        <a id = 'nav-title'>Pat's</a>
         <a href ='../index.html'>Home</a>
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
         <a href ='./menu.html'>Menu</a>
         <a href ='./events.html'>Upcoming events</a>
+        <a href = './merchandise.html'>Merchandise</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
       <h1>About</h1>
-      <p id = 'fishy'>
-        <img src = '../pictures/salmon.png'>
+      <p class = 'fishy'>
+        <img src='../pictures/frosted-cookie.jpg' width = 250px height = 250px/>       <img src='../pictures/cutter.jpeg' width = 250px height = 250px/>
       </p>
-      <p id='main-content'>
+      <p class='main-content'>
         <!--https://github.com/codefellows/seattle-201d56/blob/master/class-06/assets/support.md-->
         Cookies made into the shape of a salmon, and actually made with salmon (though the fish is ground up so fine that you can't even taste it!) that is the ideal match for a steaming cup of coffee on a gray Seattle morning. Or gray Seattle afternoon... whatever. Tourists will go gaga for them, locals will begrudgingly fall in love with them, and Pat will make a ton of money.
       </p>
