--- a/html/merchandise.html
+++ b/html/merchandise.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <nav id = 'navb'>
+        <a id = 'nav-title'>Pat's</a>
         <a href ='../index.html'>Home</a>
         <a href ='./locations.html'>Locations</a>
         <a href ='./about.html'>About</a>
@@ -18,22 +19,13 @@
         <a href = './merchandise.html'>Merchandise</a>
         <a href ='./sales.html'>BackDoor</a>
       </nav>
-      <h1>Menu</h1>
-      <p id = 'fishy'>
-        <img src = '../pictures/fish.png'>
-      </p>
-      <div id='menu'>
-        <ul id='menu-list'>
-          <li>Salmon Cookies</li>
-          <li>Salmon Cookies</li>
-          <li>Salmon Cookies</li>
-          <li>Salmon Cookies</li>
-          <li>Salmon Cookies</li>
-          <li>Salmon Cookies</li>
-          <li>Salmon Cookies</li>
-          <li>Salmon Cookies</li>
-          <li>....and Coffee</li>
-        </ul>
+      <h1>SWAG!!!!</h1>
+        <p class = 'fishy'>
+          <img src='../pictures/shirt.png'/>
+        </p>
+        <p class = 'main-content'>
+          We only have shirts! Shirts range in sizes xxs - XXXL. Call us for more info: 555-5555
+        </p>
       </div>
     </main>
     <script src = './js/app.js'></script>
